# moveit_pro_example_ws

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  colcon-defaults.yaml  docker-compose.yaml  initial_guess.yaml  nvidia-l4t-apt-source.list  pose_stamped.yaml  registered_pose.yaml  sync_subtrees.sh  test.txt
src/behavior_hub_catalog/: CMakeLists.txt  MOVEIT_PRO_IGNORE  package.xml
src/behavior_hub_catalog/config/: config.yaml
src/convert_odom_to_pose_stamped/: CMakeLists.txt  behavior_plugin.yaml  convert_odom_to_pose_stamped_plugin_description.xml  package.xml
src/convert_odom_to_pose_stamped/src/: convert_odom_to_pose_stamped.cpp  register_behaviors.cpp
src/convert_odom_to_pose_stamped/test/: test_behavior_plugins.cpp
src/convert_pose_stamped_to_transform_stamped/: CMakeLists.txt  behavior_plugin.yaml  convert_pose_stamped_to_transform_stamped_plugin_description.xml  package.xml
src/convert_pose_stamped_to_transform_stamped/src/: convert_pose_stamped_to_transform_stamped.cpp  register_behaviors.cpp
src/convert_pose_stamped_to_transform_stamped/test/: test_behavior_plugins.cpp
src/detect_aruco_tag/: CMakeLists.txt  behavior_plugin.yaml  detect_aruco_tag_plugin_description.xml  package.xml
src/detect_aruco_tag/src/: detect_aruco_tag.cpp  register_behaviors.cpp
src/detect_aruco_tag/test/: test_behavior_plugins.cpp
src/distance_to_collision/: CMakeLists.txt  behavior_plugin.yaml  distance_to_collision_plugin_description.xml  package.xml
src/distance_to_collision/src/: distance_to_collision.cpp  register_behaviors.cpp
src/distance_to_collision/test/: test_behavior_plugins.cpp
src/factory_sim/: CMakeLists.txt  README.md  package.xml
src/factory_sim/config/: config.yaml
src/factory_sim/description/: LICENSE  bin_tops.urdf  box-welds.xml  bracket_collision_geometry.xml  bracket_collision_geometry_0.xml  bracket_collision_geometry_1.xml  bracket_collision_geometry_2.xml  fanuc_lrmate200id.ros2_control.xacro  fanuc_materials.xacro  inspection_tool.urdf  inspection_tool.xml  lrmate200id_macro.xacro  picknik_fanuc.xacro  scene.xml  suction_tool.urdf  suction_tool.xml  tool.xml
src/factory_sim/models/: NOTICE  sam2.1_decoder.onnx  sam2.1_hiera_l_image_encoder.onnx  sam2.1_prompt_encoder.onnx
src/factory_sim/objectives/: activate_vacuum.xml  add_bins_to_planning_scene.xml  automask_camera_iterate_masks.xml  automask_from_camera.xml  automask_from_file.xml  automated_pickup_tool_subtree.xml  automated_return_held_tool.xml  automated_return_tool_subtree.xml  automated_tool_changing_example.xml  automated_tool_changing_example_subtree.xml  clear_snapshot.xml  deactivate_vacuum.xml  detach_and_remove_tool.xml  drop_bracket_part_in_right_bin_subtree.xml  drop_bracket_part_on_jig_subtree.xml  indicate_jig_empty.xml  indicate_jig_working.xml  indicate_part_ready.xml  inspect_convex_bowl.xml  interpolate_to_joint_state.xml  load_bracket_part_pointcloud_subtree.xml  look_for_bracket_part_subtree.xml  move_to_joint_state.xml  move_to_pose.xml  move_to_waypoint.xml  pick_and_place_brackets_from_left_bin.xml  pick_bracket_part_from_jig_subtree.xml  pick_brackets_from_left_bin.xml  pick_up_tool.xml  pick_up_tool_from_holder.xml  place_tool_in_tool_holder.xml  plan_and_execute_with_orientation_samples.xml  plan_and_execute_with_position_only.xml  plan_and_execute_with_world_vertical_orientation.xml  plan_path_along_surface.xml  planandexecutewithposeorientation.xml  planandexecutewithpositiononlyik.xml  reachability_analysis_-_blocks.xml  reachability_analysis_-_bowls.xml  reachability_analysis_for_mesh.xml  (+23 more)
src/factory_sim/test/: objectives_integration_test.py
src/factory_sim/waypoints/: waypoints.yaml
src/fanuc_sim/: CMakeLists.txt  package.xml
src/fanuc_sim/config/: config.yaml
src/fanuc_sim/description/: box-welds (copy).xml  box-welds.xml  box-welds.xml.bak  fanuc_lrmate200id.ros2_control.xacro  picknik_fanuc.xacro  scene.xml  tool.urdf  tool.xml
src/fanuc_sim/objectives/: activate_vacuum.xml  clean_convex.xml  clear_snapshot.xml  deactivate_vacuum.xml  load_mesh_as_colored_pointcloud.xml  load_mesh_as_green_poincloud.xml  move_to_joint_state.xml  move_to_pose.xml  move_to_waypoint.xml  pick_up_block_with_tool.xml  pick_up_tool.xml  place_tool_in_tool_holder.xml  precondition_test.xml  precondition_test_2.xml  precondition_test_3.xml  precondition_test_4.xml  register_cad_part.xml  register_convex.xml  register_convex.xml.bak  request_teleoperation.xml  retract.xml  setup_planning_scene.xml  take_snapshot.xml  tool_attachment_example.xml
src/fanuc_sim/waypoints/: waypoints.yaml
src/get_bool/: CMakeLists.txt  behavior_plugin.yaml  get_bool_plugin_description.xml  package.xml
src/get_bool/src/: get_bool.cpp  register_behaviors.cpp
src/get_bool/test/: test_behavior_plugins.cpp
src/get_filenames_from_directory/: CMakeLists.txt  behavior_plugin.yaml  get_filenames_from_directory_plugin_description.xml  package.xml
src/get_filenames_from_directory/src/: get_filenames_from_directory.cpp  (+3 more)
src/get_odom_instance/: CMakeLists.txt  behavior_plugin.yaml  get_odom_instance_plugin_description.xml  package.xml
src/graspnet_example_behavior/: CMakeLists.txt  behavior_plugin.yaml  graspnet_example_behavior_plugin_description.xml  package.xml
src/grinding_sim/: CMakeLists.txt  README.md  package.xml
src/hangar_sim/: CMakeLists.txt  README.md  moveit_mecanum_drive_controller_plugins.xml  package.xml
src/kitchen_sim/: CMakeLists.txt  README.md  package.xml
src/lab_sim/: CMakeLists.txt  package.xml
src/lab_sim_behaviors/: CMakeLists.txt  lab_sim_behaviors_plugin_description.xml  package.xml
src/lab_sim_collision_monitor/: CMakeLists.txt  README.md  package.xml
src/licensing_example/: CMakeLists.txt  package.xml
src/lunar_sim/: CMakeLists.txt  package.xml
src/osqp_eigen/: package.xml
src/pi0_behaviors/: CMakeLists.txt  package.xml  pi0_behaviors_plugin_description.xml
src/print_mtc_solution/: CMakeLists.txt  behavior_plugin.yaml  package.xml  print_mtc_solution_plugin_description.xml
(+2855 files in other folders)
