<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>distance_to_collision</name>
  <version>0.0.0</version>
  <description>
    Provided a point cloud and a point, get the closest distance between the
    point and the nearest point in the point cloud
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro User</maintainer>
  <author email="support@picknik.ai">MoveIt Pro User</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>moveit_studio_behavior_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <buildtool_depend>python3-colcon-common-extensions</buildtool_depend>
</package>
