<?xml version="1.0" ?>
<package format="3">
  <name>hangar_sim</name>
  <version>9.5.0</version>
  <description>
    MuJoCo simulation configuration package for Picknik's UR robot on a linear
    rail
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>

  <exec_depend>admittance_controller</exec_depend>
  <exec_depend>clearpath_mecanum_drive_controller</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_studio_agent</exec_depend>
  <exec_depend>moveit_pro_behavior</exec_depend>
  <exec_depend>beluga_amcl</exec_depend>
  <exec_depend>dual_laser_merger</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>picknik_accessories</exec_depend>
  <exec_depend>picknik_mujoco_ros</exec_depend>
  <exec_depend>picknik_ur_base_config</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>ridgeback_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>velocity_force_controller</exec_depend>
  <exec_depend>moveit_pro_sam2</exec_depend>
  <exec_depend>moveit_pro_sam3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>control_msgs</test_depend>
  <test_depend>tf2_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
